...
                          return "Please enter the email";
                        }else{
                          return null;
                        }
                        
                       },
                       key: Key("emailRegister"),
                       decoration: InputDecoration(
                          fillColor: Colors.white, filled: true,
                         labelText: "Email:",
                         border: OutlineInputBorder(borderRadius: const BorderRadius.all(
                           const Radius.circular(30.0),
                         ),
...
                              return "Please enter the password";
                            }else{
                              return null;
                            }
            
                          },
                          key: Key("passwordRegister"),
                         decoration: InputDecoration(
                         fillColor: Colors.white, filled: true,
                         labelText: "Password:",
                         border: OutlineInputBorder(borderRadius: const BorderRadius.all(
                           const Radius.circular(30.0)
                         ),
...
                          return "Password must be same as above";
                        } else{
                          return null;
                        }
                        
                       },
                       key: Key("confirmRegister"),
                       decoration: InputDecoration(
                        
                         fillColor: Colors.white, filled: true,
                         labelText: "Confirm Password:",
                         border: OutlineInputBorder(borderRadius: const BorderRadius.all(
                           const Radius.circular(30.0)
...
                       margin: EdgeInsets.only(top:30.0),
                       child: OutlinedButton(
                         onPressed: (){
                           _signuP();
                         },
                         child: Text(
                           "Sign Up",
                           style: TextStyle(color: Colors.white,
                           fontSize:20),
                         ),
                         style: OutlinedButton.styleFrom(
                           shape:RoundedRectangleBorder(borderRadius: BorderRadius.circular(30.0)),
                           backgroundColor: Color(int.parse("#41736C".replaceAll('#', '0xff')))
...
          );
          var firebaseUser =  FirebaseAuth.instance.currentUser;
          
          users.doc(firebaseUser.uid).set({
                      'email': _email, 
                      'password': _password,
                      'description':'',
                      'name':'',
                      'lastname':'',
                      'phone':'',
                      'profilePicture':'https://res.cloudinary.com/dfm8d2pyf/image/upload/v1622052320/user128_qwkt11.png',
                    }).then((value) =>
                      print('hola')
                     )
                    .catchError((error) => print("Failed to add user: $error"));

...
                          context: context,
                        builder: (ctx) => AlertDialog(
                          title: Text('An Error Occured'),
                          content: Text(msg),
                          actions: <Widget>[
                            TextButton(
                              child: Text('Okay'),
                              onPressed: (){
                                Navigator.of(ctx).pop();
                              },
                            )
                          ],
                        )
...
