import 'package:diakonia/presentation/pages/request.dart';
import 'package:diakonia/presentation/widgets/home_icon_buttoms.dart';
import 'package:flutter/material.dart';


void main() {
  runApp(MyApp());
}

class MyApp extends StatelessWidget {

  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      debugShowCheckedModeBanner: false,
      title: 'Flutter Demo',
      theme: ThemeData(
        primarySwatch: Colors.blue,
        visualDensity: VisualDensity.adaptivePlatformDensity,
      ),
      home: MyHomePage(),
    );
  }
}

class MyHomePage extends StatelessWidget {
  const MyHomePage({Key key}) : super(key: key);

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: Color.fromARGB(255, 65, 115, 108),
      body: Column(
        children: [
          Stack(
            children: [
              Transform.rotate(
                origin: Offset(30, -60),
                angle: 2.4,
                child: Container(
                  margin: EdgeInsets.only(
                    left: 75,
                    top: 30,
                  ),
                  height: 400,
                  width: double.infinity,
                  decoration: BoxDecoration(
                    borderRadius: BorderRadius.circular(80),
                    gradient: LinearGradient(
                      begin: Alignment.bottomLeft,
                      colors: [Color.fromARGB(255, 242, 187, 53), Color.fromARGB(255, 216, 160, 125)],
                    ),
                  ),
                ),
              ),
              Padding(
                padding: EdgeInsets.symmetric(horizontal: 20, vertical: 60),
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.center,
                  children: [
                    Text(
                      'Home Page',
                      style: TextStyle(
                        color: Colors.black,
                        fontSize: 40,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
                    SizedBox(
                      height: 10,
                    ),
                   
                    Padding(
                      padding: EdgeInsets.only(top: 5),
                      child: Column(
                        children: [
                          Row(
                            mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                            children: [
                              CatigoryW(
                                image: 'assets/images/user.png',
                                text: 'My Account',
                                color: Colors.black,
                                ruta: '/profile',
                              ),
                              CatigoryW(
                                image: 'assets/images/clipboard.png',
                                text: 'Add Service',
                                color: Colors.black,
                                ruta: '/addService',
                              )
                            ],
                          ),
                          SizedBox(
                            height: 10,
                          ),
                          Row(
                            mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                            children: [
                              CatigoryW(
                                image: 'assets/images/job-search.png',
                                text: 'Search',
                                color: Colors.black,
                                ruta: '/search',
                              ),
                              GestureDetector(
                                child: CatigoryW(
                                  image: 'assets/images/request.png',
                                  text: 'request',
                                  color:Colors.black,
                                 ruta:'/request'
                                   ),
                                    //  onTap: (){
                                    //         Navigator.push(context, MaterialPageRoute(
                                    //           builder: (context) => Request(),
                                          
                                    //         ),
                                    //       ) ;
                                    //       },
                                ),
                                     
                                
                            ],
                          ),
                          SizedBox(height: 10),
                          Row(
                            mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                            children: [
                              CatigoryW(
                                image: 'assets/images/map.png',
                                text: 'Map',
                                color: Colors.black,
                                ruta: '/map',
                              ),
                              CatigoryW(
                                image: 'assets/images/complain.png',
                                text: 'Messages',
                                color: Colors.black,
                                 ruta: '/chatList',
                              )
                            ],
                          ),
                        ],
                      ),
                    ),
                  ],
                ),
              ),
            ],
          ),
        ],
      ),
    );
  }
}
