...
          child: Column(
            mainAxisAlignment: MainAxisAlignment.start,
            children: <Widget>[
              Container(
                  height: 55,
                  margin: EdgeInsets.only(top: 8.0, bottom: 8.0),
                  key: Key("Name"),
                  child: TextFormField(
                    onSaved: (value) {
                      editName = value;
                    },
                    validator: (value) {
                      if (value.isEmpty) {
...
                          ),
                        )),
                  )),
              Container(
                  height: 55,
                  margin: EdgeInsets.only(top: 8.0, bottom: 8.0),
                  key: Key("LastName"),
                  child: TextFormField(
                    onSaved: (value) {
                      editLastName = value;
                    },
                    validator: (value) {
                      if (value.isEmpty) {
...
                  ),
                  child: Container(
                    height: 60,
                    width: 375,
                    padding: EdgeInsets.only(top: 30.0, bottom: 30.0),
                    margin: EdgeInsets.only(top: 40.0, bottom: 15.0),
                    key: Key("saveEdit"),
                    child: OutlinedButton(
                      onPressed: () {
                        _save();
                      },

                      child: Text(
...
